--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 @font-face {
     font-family: MabryPro;
-    src: url(Mabry-Pro-Black.ttf);
+    src: url(fonts/Mabry-Pro-Black.ttf);
 }
 
 /* mobile */
